syntax = "proto3";
option java_package = "top.houry.netty.barrage.proto";
option java_outer_classname = "BarrageProto";

// 总的消息体
message Barrage {
  string msgType = 1;
  bytes bytesData = 2;
}

// 心跳回复包
message HeartBeatResp {

}

// 心跳请求包
message HeartHeatReq {

}

// web客户端弹幕消息内容
message WebClientSendBarrage {
  string userId = 1;
  string videoId = 2;
  string msg = 3;
  string msgColor = 4;
}

// web客户端登录信息
message WebClientLogin {
  string userId = 1;
  string videoId = 2;
}

// web客户端退出信息
message WebClientLogout {
  string userId = 1;
  string videoId = 2;
}